<resources>
    <string name="app_name">App Nube de Luna</string>

    <string name="text_username">Username</string>
    <string name="hint_username">Your Email</string>
    <string name="text_password">Password</string>
    <string name="hint_password">Your password</string>
    <string name="text">Login</string>
    <string name="txt_welcome">Welcome</string>
    <string name="user">to the store  </string>
    <string name="txt_introduction">Introduction</string>
    <string name="txt_class1">Category</string>
    <string name="txt_lorem_ipsum">There is nothing better than feeling good in the place where you rest and especially there is nothing better than seeing it look the way you like it.
         Nube de Luna is the app that shows you different types of bedding that can make your resting place and dream paradise.</string>
    <string name="txt_lorem_ipsum_4">Bed sheets twin size 100cmX190cm.</string>
    <string name="txt_lorem_ipsum_2">Bed sheets full size 140cmX190cm.</string>
    <string name="txt_lorem_ipsum_3">Bed sheets queen size 170cmX200cm.</string>
    <string name="txt_action_search">Search.</string>
    <string name="txt_action_settings">Settings</string>
    <string name="txt_action_logout">Logout</string>
    <string name="textview">Register</string>
    <string name="txt_fab">Element Added</string>
    <string name="txt_name">Name</string>
    <string name="txt_lastname">Lastname</string>
    <string name="txt_Cellnumber">Cellphone</string>
    <string name="hint_name">Your Name</string>
    <string name="hint_lastname">Your Lastname</string>
    <string name="hint_Cellnumber">Your Cellphone Number</string>
    <string name="txt_Register">Register</string>
    <string name="txt_Swicht">On</string>
    <string name="txt_Return">Return</string>
    <string name="test_Seller">Seller</string>
    <string name="test_search">Search</string>
    <string name="test_Category">Category</string>
    <string name="txt_Task_1">Extra big</string>
    <string name="txt_Task_2">double bed</string>
    <string name="txt_Task_3">Single bed</string>
    <string name="txt_Task">Task</string>
    <string name="txt_Hora">Hour</string>
    <string name="txt_Lugar">Place</string>
    <string name="submit">Send </string>
    <string name="txt_ExGra">Bed sheets queen size, Extra soft brushed microfiber, Dimensions: width: 1.60m-length: 2.00m, Specification: 80% polyester-20% cotton,Reference: flamingos, Color blue</string>
    <string name="txt_Welcome">Welcome to online store </string>
    <string name="txt_Store">Store</string>
    <string name="txt_full"> Bed sheets full size
        Extra soft brushed microfiber
        Dimensions: width: 1.40m-length: 1.90m
        Specification: 80% polyester-20% cotton
        Reference: harmony
        Beige</string>
    <string name="txt_Single">Extra soft brushed microfiber
        Dimensions: width: 1.00m-length: 1.90m
        Specification: 80% polyester-20% cotton
        Reference: spring
        Color: amber</string>

    <!-- TODO: Remove or change this placeholder text -->



</resources>