<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@android:color/primary_text_dark"
        android:elevation="4dp"
        android:background="#009688"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:background="@drawable/customborder"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgViewluna"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:src="@drawable/luna" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:gravity="left"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/text_username"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            tools:ignore="TouchTargetSizeCheck">

        </EditText>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/text_password"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onlogin"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/text" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/luna"
            tools:ignore="SpeakableTextPresentCheck" />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_my_icon"
            android:contentDescription="@string/submit"
            android:layout_margin="16dp" />


    </LinearLayout>


</LinearLayout>