<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/customborder"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/test_search" />

        <LinearLayout
            android:id="@+id/layoutSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@+id/svSearch">

            <LinearLayout
                android:id="@+id/layoutSpinner1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutSpinner"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textCategory"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:text="@string/test_Category"
                    android:textColor="@color/purple_700"
                    android:textSize="12dp"
                    app:layout_constraintTop_toTopOf="@+id/layoutSpinner1" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/textCategory" />

            </LinearLayout>



            <LinearLayout
                android:id="@+id/layoutSpinner2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/layoutSpinner"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSeller"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:text="@string/test_Seller"
                    android:textColor="@color/purple_700"
                    android:textSize="12dp"
                    app:layout_constraintTop_toTopOf="@+id/layoutSpinner2" />

                <Spinner
                    android:id="@+id/seller_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    app:layout_constraintTop_toTopOf="@+id/textSeller"
                    tools:layout_editor_absoluteX="0dp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        tools:layout_editor_absoluteX="0dp"
        android:layout_marginTop="5dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reclycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:background="@drawable/customborder"
        android:orientation="horizontal">




    </LinearLayout>



</LinearLayout>