
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/primary_text_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/customborder"
            android:gravity="center"
            android:orientation="horizontal"
            tools:contex=".ToDoFragment">

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/customborder"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/txt_Task_1"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:onClick="onbtn1"
                    android:text=">" />

                <androidx.constraintlayout.motion.widget.MotionLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layoutDescription="@xml/activity_welcome_xml_constraintlayout_scene">

                </androidx.constraintlayout.motion.widget.MotionLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/customborder"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/txt_Task_2"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:onClick="onbtn2"
                    android:text=">" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/customborder"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="72dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/txt_Task_3"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="65dp"

                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:elevation="10dp"
                    android:onClick="onbtn3"
                    android:text=">" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/customborder"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#009688"
                android:text="@string/txt_Welcome"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/white"
                android:textSize="27sp"
                app:cornerRadius="50dp" />

            <ImageView
                android:id="@+id/image_tienda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/luna" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:name="com.example.appnubedeluna.DetailFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        app:tint="@color/white"
        tools:ignore="SpeakableTextPresentCheck">
    </com.google.android.material.floatingactionbutton.FloatingActionButton>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
